# robot_voice_we

./: README.md
robot_voice_ws/: recognition_result.txt
robot_voice_ws/install/: local_setup.sh  setup.sh
robot_voice_ws/install/robot_voice/lib/robot_voice/: voice_node
robot_voice_ws/install/robot_voice/share/robot_voice/: local_setup.dsv  local_setup.sh  package.bash  package.ps1  package.sh  package.zsh
robot_voice_ws/log/: latest_build
robot_voice_ws/msc/3c7b66a0cccc3f14c308417733728bdd/: u.data  urec.data
robot_voice_ws/src/robot_voice/: CMakeLists.txt  package.xml
robot_voice_ws/src/robot_voice/include/robot_voice/aiui/: AIUI.h  AIUICommon.h  AIUIConstant.h  AIUIErrorCode.h  AIUIType.h  AIUI_C.h  AIUI_V2.h
robot_voice_ws/src/robot_voice/src/: Makefile  demo.cpp
